Fixed scrolling nav on ios26

--- a/frontend/css/_navbar.scss
+++ b/frontend/css/_navbar.scss
@@ -220,6 +220,8 @@
       z-index: 1;
       padding: 2rem 0;
       font-size: 1.5rem;
+      padding-bottom: calc(2rem + env(safe-area-inset-bottom));
+      padding-top: calc(2rem + env(safe-area-inset-top));
 
       &.mobile-open {
         transform: translateY(0);
@@ -263,6 +265,9 @@
   html.mobile-open,
   body.mobile-open {
     overflow: hidden;
+    height: 100%;
+    position: fixed;
+    width: 100%;
   }
 
   body {
